--- a/src/includes/_agenda.pug
+++ b/src/includes/_agenda.pug
@@ -17,8 +17,8 @@
             'alt':'Affiche de la journée portes ouvertes du samedi 29 mars 2025 de 9h30 à 13h'
         },
         {
-            'image':'https://i.ibb.co/WvNcg94G/affiche-Jpo24052025.jpg',
-            'alt':'Affiche du job dating du jeudi 17 avril de  '
+            'image':'./images/afJobDating032025.png',
+            'alt':'Affiche du job dating du jeudi 17 avril'
         }
     ]
 
@@ -30,8 +30,8 @@ mj-section(background-color='#EDF2F7' padding-top="0" padding-left="23px" paddin
     mj-group(width="50%")
         each affiche in affichesList1
             mj-column(width='50%' padding="2px")
-                mj-image(padding='0' border='none' fluid-on-mobile="true" width="480px" src=affiche.image alt=affiche.alt)/
+                mj-image(padding='0' fluid-on-mobile="true" width="215px" src=affiche.image alt=affiche.alt)/
     mj-group(width='50%')
         each affiche in affichesList2
             mj-column(width='50%' padding="2px")
-                mj-image(padding='0' border='none' fluid-on-mobile="true" width="480px" src=affiche.image alt=affiche.alt)/
+                mj-image(padding='0' fluid-on-mobile="true" width="215px" src=affiche.image alt=affiche.alt)/
