--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -179,18 +179,18 @@
     <mj-section background-color="#EDF2F7" padding-top="0" padding-left="23px" padding-right="23px">
       <mj-group width="50%">
         <mj-column width="50%" padding="2px">
-          <mj-image padding="0" border="none" fluid-on-mobile="true" width="480px" src="./images/afAtlas032025.png" alt="Rencontre - l'alternance : un passeport pour une formation dans le supérieur 6 mars"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="215px" src="./images/afAtlas032025.png" alt="Rencontre - l'alternance : un passeport pour une formation dans le supérieur 6 mars"/>
         </mj-column>
         <mj-column width="50%" padding="2px">
-          <mj-image padding="0" border="none" fluid-on-mobile="true" width="480px" src="./images/afEtudiant032025.png" alt="Salon de l'Étudiant : Formations et recrutement en alternance 21 et 22 mars"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="215px" src="./images/afEtudiant032025.png" alt="Salon de l'Étudiant : Formations et recrutement en alternance 21 et 22 mars"/>
         </mj-column>
       </mj-group>
       <mj-group width="50%">
         <mj-column width="50%" padding="2px">
-          <mj-image padding="0" border="none" fluid-on-mobile="true" width="480px" src="./images/afJpo032025.png" alt="Affiche de la journée portes ouvertes du samedi 29 mars 2025 de 9h30 à 13h"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="215px" src="./images/afJpo032025.png" alt="Affiche de la journée portes ouvertes du samedi 29 mars 2025 de 9h30 à 13h"/>
         </mj-column>
         <mj-column width="50%" padding="2px">
-          <mj-image padding="0" border="none" fluid-on-mobile="true" width="480px" src="https://i.ibb.co/WvNcg94G/affiche-Jpo24052025.jpg" alt="Affiche du job dating du jeudi 17 avril de  "/>
+          <mj-image padding="0" fluid-on-mobile="true" width="215px" src="./images/afJobDating032025.png" alt="Affiche du job dating du jeudi 17 avril"/>
         </mj-column>
       </mj-group>
     </mj-section>
