--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -96,7 +96,7 @@
         <mj-text padding-top="5px" padding-bottom="5px" mj-class="T700 cT+1" font-style="italic">La rentrée des alternances est lancée&nbsp;!</mj-text>
         <mj-text padding-top="5px" padding-bottom="5px" mj-class="T400 cT-0" font-style="italic">C'est réellement parti&nbsp;! Les campagnes d'alternance battent leur plein, et c'est dans cette période riche et dynamique que les candidats viennent à notre rencontre pour bénéficier de nos formations. Que ce soit pour un <span style="font-weight:700;color:#2D3748;">BTS Assurance</span>, un <span style="font-weight:700;color:#2D3748;">Bachelor Chargée de Clientèle en Assurance et Banque</span> ou un <span style="font-weight:700;color:#2D3748;">Mastère Expert en Ingénierie Patrimoniale</span>, les postulants sont prêts à relever de nouveaux défis&nbsp;! </mj-text>
         <mj-text padding-top="5px" padding-bottom="5px" mj-class="T400 cT-0" font-style="italic">Grâce à la confiance de <span style="font-weight:700;color:#2D3748;">nos entreprises partenaires</span>, nos étudiants ont l'opportunité de poursuivre leur parcours académique tout en gagnant en expérience sur le terrain. Ces entreprises nous font l'honneur de les accompagner en offrant des postes en alternance, propices à l'épanouissement professionnel de nos talents.</mj-text>
-        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T400 cT-0" font-style="italic">Alors, un mot d'ordre : <span style="font-weight:700;color:#2D3748;">À vos CV&nbsp;!</span> Les entreprises peuvent d'ores et déjà découvrir les profils de nos futurs alternants, disponibles dans un espace dédié sur notre site. C'est l'occasion idéale de saisir de belles opportunités et de se lancer dans une aventure professionnelle enrichissante&nbsp;!</mj-text>
+        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T400 cT-0" font-style="italic">Les entreprises peuvent d'ores et déjà découvrir les profils de nos futurs alternants, disponibles dans un espace dédié sur notre site. C'est l'occasion idéale de saisir de belles opportunités et de se lancer dans une aventure professionnelle enrichissante&nbsp;!</mj-text>
         <mj-text padding-top="5px" padding-bottom="5px" mj-class="T700 cT+1" font-style="italic">À vos candidatures, prêts, partez&nbsp;!</mj-text>
       </mj-column>
     </mj-section>
@@ -144,7 +144,7 @@
         <mj-text padding="5px 0" mj-class="T400 cT-0">Cette rencontre, riche et captivante, a permis à nos talents de rencontrer les managers des services en recherche de nouveaux collaborateurs. <span style="font-weight:700;color:#2D3748;">Plus de 20 postes disponibles&nbsp;!</span> Un bel avenir s'annonce pour nos élèves grâce à cette formidable opportunité.</mj-text>
       </mj-column>
     </mj-section>
-    <mj-section background-color="#EDF2F7" padding="20px 17px">
+    <mj-section background-color="#ffffff" padding="20px 17px">
       <mj-column width="40%" padding="8px">
         <mj-image padding="0px" border="none" css-class="mobile-hide" src="./images/tradingGaming.png" alt="logo du Trading Game d'Ecosup Campus" width="480px"/>
         <mj-image padding="0px" border="none" css-class="mobile-show" src="https://i.ibb.co/sJ5vYgVt/img-Trading-Game012025-1.jpg" alt="logo du Trading Game d'Ecosup Campus" width="480px"/>
@@ -153,8 +153,8 @@
         <mj-spacer height="12px"></mj-spacer>
         <mj-text padding="0" align="left" mj-class="T+2 cA+2" text-transform="uppercase">Trading Game</mj-text>
         <mj-text padding="0" align="left" mj-class="T+1 cA+1">Félicitations aux gagnants&nbsp;!</mj-text>
-        <mj-text padding="5px 0" mj-class="cT-0 T400">Le <span style="font-weight:700;color:#2D3748;">Trading Game</span> touche à sa fin, et nous tenons à féliciter chaleureusement tous les participants qui ont joué le jeu jusqu'aux derniers jours&nbsp;! Un grand bravo à <span style="font-weight:700;color:#2D3748;">Nom du gagnant</span>, qui a su se démarquer en empochant les gains les plus importants après un mois de combat acharné sur les marchés financiers mondiaux. </mj-text>
-        <mj-text padding="5px 0" mj-class="cT-0 T400">Félicitations également à <span style="font-weight:700;color:#2d3748;">Nom du deuxième</span>, qui remporte la deuxième place avec brio&nbsp;! Et un immense bravo à tous les autres participants, qui garderont sans aucun doute un souvenir mémorable de cette aventure boursière.</mj-text>
+        <mj-text padding="5px 0" mj-class="cT-0 T400">Le <span style="font-weight:700;color:#2D3748;">Trading Game</span> touche à sa fin, et nous tenons à féliciter chaleureusement tous les participants qui ont joué le jeu jusqu'aux derniers jours&nbsp;! Un grand bravo à <span style="font-weight:700;color:#2D3748;">Laura</span>, qui a su se démarquer en empochant les gains les plus importants après un mois de combat acharné sur les marchés financiers mondiaux. </mj-text>
+        <mj-text padding="5px 0" mj-class="cT-0 T400">Félicitations également à <span style="font-weight:700;color:#2d3748;">Sary</span>, qui remporte la deuxième place avec brio&nbsp;! Et un immense bravo à tous les autres participants, qui garderont sans aucun doute un souvenir mémorable de cette aventure boursière.</mj-text>
         <mj-text padding="5px 0" mj-class="cT-0 T400">Chez <span style="font-weight:700;color:#2D3748;">EcoSup Campus</span>, il n'y a pas de perdant - chacun a gagné une expérience précieuse&nbsp;!</mj-text>
       </mj-column>
     </mj-section>
