--- a/src/includes/_footer.pug
+++ b/src/includes/_footer.pug
@@ -10,6 +10,6 @@ mj-section(background-color='#586c8d' padding='20px 32px')
         mj-spacer(height="25px")
 mj-section
     mj-column(width='320px')
-        mj-text(padding='0' align='center' font-size='12px' font-weight='300' line-height='16px' color='#0a0c10') Si vous n'arrivez pas à lire cet email, cliquez #[a(style='color:#BA4995;font-size:12px;font-weight:700' href='{{ mirror}}') ici]           
-        mj-text(padding='0' align='center' font-size='12px' font-weight='300' line-height='16px' color='#0a0c10') Pour être sûr(e) de recevoir nos communications, ajoutez #[a(style='text-decoration:none;color:#0a0c10;' href='mailto:contact@ecosup-campus.fr') contact@ecosup-campus.fr] dans votre carnet d'adresses.
-        mj-text(padding='0' align='center' font-size='12px' font-weight='300' line-height='16px' color='#0a0c10') Pour vous désinscrire, cliquez #[a(style='color:#BA4995;font-size:12px;font-weight:700;' href='{{ unsubscribe }}') ici]
+        mj-text(padding='0' align='center' mj-class="T-2-300" color='#0a0c10') Si vous n'arrivez pas à lire cet email, cliquez #[a(style='color:#BA4995;font-size:12px;font-weight:700' href='{{ mirror}}') ici]           
+        mj-text(padding='0' align='center' mj-class="T-2-300" color='#0a0c10') Pour être sûr(e) de recevoir nos communications, ajoutez #[a(style='text-decoration:none;color:#0a0c10;' href='mailto:contact@ecosup-campus.fr') contact@ecosup-campus.fr] dans votre carnet d'adresses.
+        mj-text(padding='0' align='center' mj-class="T-2-300" color='#0a0c10') Pour vous désinscrire, cliquez #[a(style='color:#BA4995;font-size:12px;font-weight:700;' href='{{ unsubscribe }}') ici]
