--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -18,6 +18,7 @@
       <mj-class name="T400" font-family="Arial, Helvetica, sans-serif" font-size="16px" font-weight="400" line-height="20px"/>
       <mj-class name="T-1-700" font-family="Arial, Helvetica, sans-serif" font-size="12px" font-weight="700" line-height="16px"/>
       <mj-class name="T-1-400" font-family="Arial, Helvetica, sans-serif" font-size="12px" font-weight="400" line-height="16px"/>
+      <mj-class name="T-2-300" font-family="Arial, Helvetica, sans-serif" font-size="10px" font-weight="300" line-height="14px"/>
       <mj-class name="cA+2" color="#944694"/>
       <mj-class name="cA+1" color="#684092"/>
       <mj-class name="cT-0" color="#45546e"/>
@@ -282,9 +283,9 @@
     </mj-section>
     <mj-section>
       <mj-column width="320px">
-        <mj-text padding="0" align="center" font-size="12px" font-weight="300" line-height="16px" color="#0a0c10">Si vous n'arrivez pas à lire cet email, cliquez <a style="color:#BA4995;font-size:12px;font-weight:700" href="{{ mirror}}">ici</a>           </mj-text>
-        <mj-text padding="0" align="center" font-size="12px" font-weight="300" line-height="16px" color="#0a0c10">Pour être sûr(e) de recevoir nos communications, ajoutez <a style="text-decoration:none;color:#0a0c10;" href="mailto:contact@ecosup-campus.fr">contact@ecosup-campus.fr</a> dans votre carnet d'adresses.</mj-text>
-        <mj-text padding="0" align="center" font-size="12px" font-weight="300" line-height="16px" color="#0a0c10">Pour vous désinscrire, cliquez <a style="color:#BA4995;font-size:12px;font-weight:700;" href="{{ unsubscribe }}">ici</a></mj-text>
+        <mj-text padding="0" align="center" mj-class="T-2-300" color="#0a0c10">Si vous n'arrivez pas à lire cet email, cliquez <a style="color:#BA4995;font-size:12px;font-weight:700" href="{{ mirror}}">ici</a>           </mj-text>
+        <mj-text padding="0" align="center" mj-class="T-2-300" color="#0a0c10">Pour être sûr(e) de recevoir nos communications, ajoutez <a style="text-decoration:none;color:#0a0c10;" href="mailto:contact@ecosup-campus.fr">contact@ecosup-campus.fr</a> dans votre carnet d'adresses.</mj-text>
+        <mj-text padding="0" align="center" mj-class="T-2-300" color="#0a0c10">Pour vous désinscrire, cliquez <a style="color:#BA4995;font-size:12px;font-weight:700;" href="{{ unsubscribe }}">ici</a></mj-text>
       </mj-column>
     </mj-section>
   </mj-body>
