--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -17,6 +17,7 @@ mjml
             mj-class(name="T400" font-family="Arial, Helvetica, sans-serif" font-size="16px" font-weight="400" line-height="20px")/
             mj-class(name="T-1-700" font-family="Arial, Helvetica, sans-serif" font-size="12px" font-weight="700" line-height="16px")/
             mj-class(name="T-1-400" font-family="Arial, Helvetica, sans-serif" font-size="12px" font-weight="400" line-height="16px")/
+            mj-class(name="T-2-300" font-family="Arial, Helvetica, sans-serif" font-size="10px" font-weight="300" line-height="14px")/
             //-color
             mj-class(name="cA+2" color="#944694")/
             mj-class(name="cA+1" color="#684092")/
